vpc.tf
resource "aws_vpc" "main" {
  cidr_block = var.vpc_cidr_block

  tags = var.tags

  lifecycle {
    ignore_changes = [
      tags
    ]
  }
}
